# DA-Register-Allocation

./: .gitignore  PROJECT_UNDERSTANDING.md  Project_Code_Rework.md  README.md  run.sh
code/: CMakeLists.txt  Doxyfile
code/include/: InterferenceGraph.h  OutputWriter.h  RegisterAllocator.h  WebBuilder.h
code/include/core/: InterferenceGraph.h  RegisterAllocator.h
code/include/io/: BatchProcessor.h
code/include/models/: AllocationData.h
code/include/parser/: RangesParser.h  RegistersParser.h
code/include/ui/: DisplayFormatter.h  Menu.h
code/src/: BatchProcessor.cpp  DisplayFormatter.cpp  InterferenceGraph.cpp  OutputWriter.cpp  RangesParser.cpp  RegisterAllocator.cpp  WebBuilder.cpp  main.cpp
code/src/core/: Coloring_BCT.cpp  Coloring_Basic.cpp  Coloring_Dsatur.cpp  Coloring_Utils.cpp  InterferenceGraph.cpp  RegisterAllocator.cpp  WebBuilder.cpp
code/src/io/: BatchProcessor.cpp  OutputWriter.cpp
code/src/parser/: RegistersParser.cpp
code/src/ui/: DisplayFormatter.cpp  Menu.cpp
docs/: Doxyfile
docs/html/: AllocationData_8h.html  AllocationData_8h.js  AllocationData_8h_source.html  BatchProcessor_8cpp.html  BatchProcessor_8h.html  BatchProcessor_8h_source.html  Coloring__BCT_8cpp.html  Coloring__BCT_8cpp.js  Coloring__Basic_8cpp.html  Coloring__Dsatur_8cpp.html  Coloring__Dsatur_8cpp.js  Coloring__Utils_8cpp.html  DisplayFormatter_8cpp.html  DisplayFormatter_8h.html  DisplayFormatter_8h_source.html  Menu_8h.html  (+96 more)
outputs/: output1.txt
tests/: benchmark.sh  compare_dsatur_vs_bct.py  find_dsatur_failure.py  find_nonperfect_advantage.py  run_tests.sh
(+325 files in other folders)
